--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+/SurvivorIO_BackUpThisFolder_ButDontShipItWithYourGame
+/SurvivorIO_BurstDebugInformation_DoNotShip
+/SurvivorIOTest_BackUpThisFolder_ButDontShipItWithYourGame
+/SurvivorIOTest_BurstDebugInformation_DoNotShip
